fixed grid and keyboard alignment

--- a/wordle/src/styles.css
+++ b/wordle/src/styles.css
@@ -1,5 +1,4 @@
 .gridBox {
     /* background-color: black; */
-    height: 100%;
     border-style: solid
 }
